spec/lib/cli/log/errors/usage.js
// Generated by CoffeeScript 1.12.6
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive({
      it: 'returns usage info for given command',
      i: ['titles'],
      e: "\n" + (dd.helper.c.bright('titles')) + " or " + (dd.helper.c.bright('t')) + " — Parse target code folder files for module titles, save found to " + (dd.helper.c.bright('ddry.json')) + "\n  Human-friendly module title is taken from the first block comment in module code. Once you named your modules this way, refresh\n  the spec config with this no arguments command. It also will parse the modules included to spec as " + (dd.helper.c.bright('outside')) + ".\n\n  Syntax:\n    $ ddry t\n"
    });
  };

}).call(this);
